# ros-robotic-arm

./: README.md  ikfast61_arm.cpp
robotic_arm_algorithms/: CMakeLists.txt  package.xml  setup.py
robotic_arm_algorithms/launch/: move.launch
robotic_arm_algorithms/scripts/: set_joint_states_client.py  set_joint_states_service.py
robotic_arm_algorithms/srv/: SetJointStates.srv
robotic_arm_control/: CMakeLists.txt  package.xml
robotic_arm_control/config/: control.yaml  robotic_arm_control.yaml
robotic_arm_control/launch/: control.launch  moveit.launch  robotic_arm_control.launch  rviz.launch
robotic_arm_control/rviz/: control.rviz
robotic_arm_description/: CMakeLists.txt  package.xml
robotic_arm_description/urdf/: arm.xacro  base.xacro  forearm.xacro  gazebo.xacro  gripper.xacro  robotic_arm_simulator.xacro  transmission.xacro
robotic_arm_gazebo/: CMakeLists.txt  package.xml  setup.py
robotic_arm_gazebo/launch/: empty_world.launch
robotic_arm_gazebo/worlds/: empty.world
robotic_arm_ikfast_arm_plugin/: CMakeLists.txt  package.xml  robotic_arm_arm_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
robotic_arm_ikfast_arm_plugin/src/: robotic_arm_arm_ikfast_moveit_plugin.cpp
robotic_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotic_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robotic_arm.srdf  ros_controllers.yaml
robotic_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robotic_arm_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
