<?xml version="1.0"?>
<package format="2">
  <name>robotic_arm_algorithms</name>
  <version>0.0.0</version>
  <description>Package description</description>

  <maintainer email="Kristyna.Kumpanova@akka.eu">Kumpanova Kristyna</maintainer>
  <license></license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
