<?xml version="1.0"?>
<package>
  <name>robotic_arm_control</name>
  <version>0.0.0</version>
  <description>
      Package handles robotic arm controllers.
  </description>
  <maintainer email="Kristyna.Kumpanova@akka.eu">Kristyna Kumpanova</maintainer>
  <license>STIHL</license>
 
  <buildtool_depend>catkin</buildtool_depend>
 
<run_depend>controller_manager</run_depend>
<run_depend>joint_state_controller</run_depend>
<run_depend>robot_state_publisher</run_depend>
<run_depend>position_controllers</run_depend>
<run_depend>velocity_controllers</run_depend>
 
  <export>
  </export>
 
</package>
