<?xml version="1.0"?>
<package>
  <name>robotic_arm_gazebo</name>
  <version>0.0.0</version>
  <description>
      The Gazebo resources and configurations for the robotic arm.
  </description>
  <maintainer email="Kristyna.Kumpanova@akka.eu">Kristyna Kumpanova</maintainer>
  <license></license>
 
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  
  <run_depend>robotic_arm_description</run_depend>
  <run_depend>robotic_arm_control</run_depend>
 
  <export>
      <gazebo_ros 
          gazebo_plugin_path="${prefix}/devel/lib" 
          ld_library_path="${prefix}/devel/lib"/>
  </export>
 
</package>
